--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,14 @@
 			<classifier>mule-plugin</classifier>
 		</dependency>
 	</dependencies>
+	<distributionManagement>
+		<repository>
+		    <id>Repository</id>
+		    <name>Corporate Repository</name>
+		    <url>https://maven.anypoint.mulesoft.com/api/v3/organizations/${project.group.Id}/maven</url>
+		    <layout>default</layout>
+		</repository>
+	</distributionManagement>
 
 	<repositories>
 		<repository>
@@ -76,6 +84,12 @@
 			<id>mulesoft-releases</id>
 			<name>MuleSoft Releases Repository</name>
 			<url>https://repository.mulesoft.org/releases/</url>
+			<layout>default</layout>
+		</repository>
+		<repository>
+			<id>anypoint-exchange-v3</id>
+			<name>Private Exchange repository</name>
+			<url>https://maven.anypoint.mulesoft.com/api/v3/organizations/${project.group.Id}/maven</url>
 			<layout>default</layout>
 		</repository>
 	</repositories>
